--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\""
   },
   "dependencies": {
-    "groq-sdk": "^0.9.0",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
+    "groq-sdk": "^0.9.1",
     "next": "15.0.4",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
