--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "groq-sdk": "^0.9.1",
     "next": "15.0.4",
     "prettier": "^3.4.2",
+    "puppeteer": "^24.26.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
