--- a/package.json
+++ b/package.json
@@ -13,18 +13,20 @@
     "axios": "^1.12.2",
     "cheerio": "^1.1.2",
     "groq-sdk": "^0.9.1",
-    "next": "15.0.4",
+    "mammoth": "^1.11.0",
+    "next": "^15.5.9",
     "prettier": "^3.4.2",
     "puppeteer": "^24.26.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "unpdf": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4",
+    "eslint-config-next": "^15.5.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
